Documentation and Versions updated
Updated docs, manifest, and module mof

--- a/TechNetDocumentationTemplate.html
+++ b/TechNetDocumentationTemplate.html
@@ -88,6 +88,9 @@
                         <strong>Ensure</strong>: <span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>Should
                         the web service be created or deleted
                     </li>
+                    <li>
+                        <strong>CertificateSubject</strong>: <span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>Select SSL certificate by Subject Name
+                    </li>
                 </ul>
                 <p>Some of the properties of the <strong>xWindowsProcess</strong> resource are enumerate below. For a complete list, please use Get-DscResource</p>
                 <ul style="list-style-type:disc; direction:ltr">
@@ -338,7 +341,14 @@
                         </em>
                     </p>
                     <h1 style="color:#2e74b5; font-family:Calibri Light; font-size:large">Versions</h1>
-                    <p>3.0.3.4</p>
+                <p>3.0.3.5</p>
+                <ul style="list-style-type:disc; direction:ltr">
+                    <li>
+                        Add CertificateSubject optional parameter to xDSCWebService
+                    </li>
+                </ul>
+                
+                <p>3.0.3.4</p>
                     <ul style="list-style-type:disc; direction:ltr">
                         <li>
                             Multiple issues addressed 
